@@ -1,15 +1,0 @@
-display_label=false
-display_icon=true
-display_power=true
-display_percentage=true
-display_time=false
-tooltip_display_percentage=false
-tooltip_display_time=true
-low_percentage=10
-critical_percentage=5
-action_on_low=1
-action_on_critical=1
-hide_when_full=1
-command_on_low=
-command_on_critical=
-
