@@ -1,8 +1,9 @@
 sidux-art-xfce (1.3) UNRELEASED; urgency=low
 
-  * NOT RELEASED YET
+  * Do not install customized xfce4-panel configuration file, it is in
+    conflict with the xfce4-panel package.
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 04 Sep 2008 00:03:29 +0200
+ -- Kel Modderman <kel@otaku42.de>  Thu, 04 Sep 2008 08:29:25 +1000
 
 sidux-art-xfce (1.2) unstable; urgency=low
 
